# health-api

./: Dockerfile  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: build.yaml
scripts/: setup
src/health_api/: __init__.py  main.py
src/health_api/db/: database.py  insert.py  schema.sql
src/health_api/models/: health.py
src/health_api/routes/: sync.py
