[project]
name = "health-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Christopher Vestman", email = "christophervestman@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.136.1",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.2.2",
]

[project.scripts]
health-api = "health_api.main:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
  "ruff>=0.9",
  "httpx>=0.27", # for FastAPI test client
]

[tool.ruff]
line-length = 100
